crates/arity-parser/tests/snapshots/dcf_snapshots__field_name_spaced_diagnostics.snap
---
source: crates/arity-parser/tests/dcf_snapshots.rs
expression: "format!(\"{:#?}\", output.diagnostics)"
---
[]
