crates/arity-parser/tests/snapshots/dcf_snapshots__malformed_line_diagnostics.snap
---
source: crates/arity-parser/tests/dcf_snapshots.rs
expression: "format!(\"{:#?}\", output.diagnostics)"
---
[
    ParseDiagnostic {
        message: "malformed line: expected 'Field: value' or an indented continuation line",
        start: 11,
        end: 33,
    },
]
