crates/arity-parser/tests/snapshots/dcf_snapshots__no_trailing_newline_cst.snap
---
source: crates/arity-parser/tests/dcf_snapshots.rs
expression: "format!(\"{:#?}\", output.cst)"
---
ROOT@0..21
  RECORD@0..21
    FIELD@0..11
      FIELD_NAME@0..7 "Package"
      COLON@7..8 ":"
      VALUE_LINE@8..11
        WHITESPACE@8..9 " "
        VALUE_TEXT@9..10 "p"
        NEWLINE@10..11 "\n"
    FIELD@11..21
      FIELD_NAME@11..18 "Version"
      COLON@18..19 ":"
      VALUE_LINE@19..21
        WHITESPACE@19..20 " "
        VALUE_TEXT@20..21 "1"
