crates/arity-parser/tests/snapshots/dcf_snapshots__orphan_continuation_diagnostics.snap
---
source: crates/arity-parser/tests/dcf_snapshots.rs
expression: "format!(\"{:#?}\", output.diagnostics)"
---
[
    ParseDiagnostic {
        message: "continuation line at the start of a record",
        start: 12,
        end: 35,
    },
]
