crates/arity-parser/tests/snapshots/dcf_snapshots__simple_cst.snap
---
source: crates/arity-parser/tests/dcf_snapshots.rs
expression: "format!(\"{:#?}\", output.cst)"
---
ROOT@0..43
  RECORD@0..43
    FIELD@0..15
      FIELD_NAME@0..7 "Package"
      COLON@7..8 ":"
      VALUE_LINE@8..15
        WHITESPACE@8..9 " "
        VALUE_TEXT@9..14 "mypkg"
        NEWLINE@14..15 "\n"
    FIELD@15..30
      FIELD_NAME@15..22 "Version"
      COLON@22..23 ":"
      VALUE_LINE@23..30
        WHITESPACE@23..24 " "
        VALUE_TEXT@24..29 "1.0.0"
        NEWLINE@29..30 "\n"
    FIELD@30..43
      FIELD_NAME@30..37 "License"
      COLON@37..38 ":"
      VALUE_LINE@38..43
        WHITESPACE@38..39 " "
        VALUE_TEXT@39..42 "MIT"
        NEWLINE@42..43 "\n"
