crates/arity-parser/tests/snapshots/dcf_snapshots__whitespace_only_separator_cst.snap
---
source: crates/arity-parser/tests/dcf_snapshots.rs
expression: "format!(\"{:#?}\", output.cst)"
---
ROOT@0..26
  RECORD@0..11
    FIELD@0..11
      FIELD_NAME@0..7 "Package"
      COLON@7..8 ":"
      VALUE_LINE@8..11
        WHITESPACE@8..9 " "
        VALUE_TEXT@9..10 "p"
        NEWLINE@10..11 "\n"
  BLANK_LINE@11..15
    WHITESPACE@11..14 "   "
    NEWLINE@14..15 "\n"
  RECORD@15..26
    FIELD@15..26
      FIELD_NAME@15..22 "Version"
      COLON@22..23 ":"
      VALUE_LINE@23..26
        WHITESPACE@23..24 " "
        VALUE_TEXT@24..25 "1"
        NEWLINE@25..26 "\n"
